[tool.poetry]
name = "advancedml"
version = "0.1.0"
description = "AML Final Project"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = ">=3.10,<3.13"
transformers = "^4.46.3"
numpy = "^2.1.3"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"
tqdm = "^4.67.1"
matplotlib = "^3.9.2"
opencv-python = "^4.10.0.84"
pydrive = "^1.3.1"
seaborn = "^0.13.2"
pillow = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
